--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ li a:hover {
 <body>
 <script>
   {
-    alert("“Assalamualaikum WBT”.\nWelcome To Irsyad Anas Website\nMay Allah bless you <3")
+    alert("“Assalamualaikum WBT”.\nWelcome To Irsyad Anas Website\nMay Allah bless you <3\n*This website will be look very minimalist")
   }
 
 </script>
