--- a/contact_me.html
+++ b/contact_me.html
@@ -67,17 +67,17 @@ Email: <b>syadanas707@gmail.com</b> <br>
 
  <div class="image-container">
     <img src="irsyad/ig1.jpg" width="100px" alt="Image 1" class="image">
-    <a href="https://www.instagram.com/irsyad.anas/" class="link">Link to Instagram</a>
+    <a href="https://www.instagram.com/irsyad.anas/" class="link">Click to Instagram</a>
 
     <img src="irsyad/tt.jpg" width="100px" alt="Image 3" class="image">
-    <a href="https://www.tiktok.com/@irsyad_anas?is_from_webapp=1&sender_device=pc" class="link">Link to TikTok</a>
+    <a href="https://www.tiktok.com/@irsyad_anas?is_from_webapp=1&sender_device=pc" class="link">Click to TikTok</a>
 
     <img src="irsyad/tele.jpg" width="100px" alt="Image 2" class="image">
-    <a href="https://t.me/+GnrqNBQhU_s1OGY1" class="link">Link to Telegram</a>
+    <a href="https://t.me/+GnrqNBQhU_s1OGY1" class="link">Click to Telegram</a>
 
     
     <img src="irsyad/x.jpg" width="100px"alt="Image 4" class="image">
-    <a href="https://twitter.com/ccadoss" class="link">Link to Twitter</a>
+    <a href="https://twitter.com/ccadoss" class="link">Click to Twitter</a>
   </div>
 
   <footer>
