--- a/experience.html
+++ b/experience.html
@@ -22,7 +22,29 @@
       margin-bottom: 10px;
       padding: 15px;
     }
-    
+     #myImage {
+            border: 2px solid #3498db;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            font-weight: bold;
+            cursor: pointer;
+            border: 2px solid #3498db;
+            border-radius: 5px;
+            background-color: #3498db;
+            color: #fff;
+            margin: 0 10px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        button:hover {
+            background-color: black;
+            color: whitesmoke;
+        }
  
 </style>
 </head>
