--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ li a:hover {
 
 
   <section>
-    <h2>About Me</h2>
+    <h2 style="color: black;" >About Me</h2>
 
     <img src="irsyad/formal.jpeg"  class="center" height="150px" width="150px">
     <p style="text-align: justify;">My name is Wan Muhammad Irsyad Bin Wan Nor Anas. I am still unmarried at the age of twenty. I presently attend Universiti Teknologi Mara in Kelantan, and I am originally from Kota Bharu in Kelantan. Reading and playing football are two of my interests. One of my goals is to work as a successful university instructor. My goal is to support students in achieving their goals. Furthermore, teaching is a noble and well-respected profession.  As a result, I'm always developing my independence and setting a good example for my siblings. I'm an ambitious, visionary individual. </p>
